fix course and test and question
